# MLplayground

./: LICENSE  README.md  pyproject.toml
examples/: perceptron.py
mlplayground/: __init__.py  perceptron.py
tests/test_unit/: test_perceptron.py
