[project]
name = "MLplayground"
authors = [{ name = "Niko Sirmpilatze", email = "niko.sirbiladze@gmail.com" }]
description = "A simple Python package"
readme = "README.md"
requires-python = ">=3.9.0"
dynamic = ["version"]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "jupyter",
    "scikit-learn",
]

license = { text = "BSD-3-Clause" }

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "tox",
    "black",
    "mypy",
    "pre-commit",
    "ruff",
    "setuptools_scm",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mlplayground*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "--cov=mlplayground"
filterwarnings = ["error"]

[tool.black]
target-version = ['py39', 'py310', 'py311']
skip-string-normalization = false
line-length = 79

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
    ".yaml",
    "tox.ini",
    "tests/",
    "tests/test_unit/",
    "tests/test_integration/",
]

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
select = ["I", "E", "F"]
fix = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39,310,311}
isolated_build = True

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=mlplayground --cov-report=xml
"""


[tool.codespell]
skip = '.git'
check-hidden = true
